--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,11 @@ html {
     scroll-behavior: smooth;
 }
 
+body {
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
 .main__header {
     background-color: var(--background);
     min-height: 100vh;
@@ -50,6 +55,7 @@ html {
     min-width: 40%;
     max-width: 50%;
     max-height: 70%;
+    min-height: 60%;
 }
 
 .cards .main__text__card {
@@ -69,8 +75,9 @@ html {
     line-height: 1.8rem;
 }
 
+
 .card.active {
-    grid-column: 1 / span 3;
+    grid-column: span 3;
     order: -1;
 }
 
@@ -224,4 +231,15 @@ a {
         width: 40px;
     }
 
+}
+
+.circle {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    pointer-events: none;
+    z-index: 50;
 }
